<resources>
    <string name="app_name" translatable="false">Hisob</string>
    <string name="time">Hamma vaqt</string>
    <string name="delete">O\'chirmoqchimisiz?</string>
    <string name="msgIn">Kirimni kiriting</string>
    <string name="msgOut">Sarflangan miqdorni kiriting</string>
    <string name="first">birinchi vaqt</string>
    <string name="now">Hozir</string>
    <string name="amount">Mablag‘</string>
    <string name="note">Izoh</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="loading">Yuklanmoqda…</string>
    <string name="title_bill_type">Hisob turi</string>
    <string name="income">Kirim</string>
    <string name="expense">Chiqim</string>
    <string name="borrow">Qarz olish</string>
    <string name="borrow_back">Qarzni qaytarish</string>
    <string name="lend">Qarz berish</string>
    <string name="lend_back">Qarzni qaytarib olish</string>
    <string name="save">Saqlash</string>
    <string name="summa">1,000</string>
    <string name="sum">so‘m</string>
    <string name="type_error">Amaliyotni turini tanlang!</string>
    <string name="your_name">Ismingiz?</string>
    <string name="enter_your_name">Ismingizni kiriting!</string>
    <string name="title_delete">Siz rostdan ham bu amaliyotni o\'chirmoqchimisiz?</string>
    <string name="no">Yo‘q</string>
    <string name="yes">Ha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="type_filter">Type filter</string>
    <string name="time_filter">Vaqt filter</string>
    <string name="from_time">From time</string>
    <string name="to_time">To time</string>
    <string name="profile">Profil</string>
</resources>
