<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:targetApi="o">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/black"
        android:paddingHorizontal="90dp"
        android:paddingVertical="10dp"
        android:singleLine="true"
        android:text="@string/title_bill_type"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtOutgoing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#fdd"
        android:padding="10dp"
        android:text="@string/expense"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/income"
        app:drawableLeftCompat="@drawable/income" />

    <TextView
        android:id="@+id/txtIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#dfd"
        android:padding="10dp"
        android:text="@string/income"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/expense"
        app:drawableLeftCompat="@drawable/expense" />

    <TextView
        android:id="@+id/txtBorrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#ffd"
        android:padding="10dp"
        android:text="@string/borrow"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/borrow"
        app:drawableLeftCompat="@drawable/borrow" />

    <TextView
        android:id="@+id/txtBorrowBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#ffd"
        android:padding="10dp"
        android:text="@string/borrow_back"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/borrow_back"
        app:drawableLeftCompat="@drawable/borrow_back" />

    <TextView
        android:id="@+id/txtLend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#ddf"
        android:padding="10dp"
        android:text="@string/lend"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/lend"
        app:drawableLeftCompat="@drawable/lend" />

    <TextView
        android:id="@+id/txtLendBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#ddf"
        android:padding="10dp"
        android:text="@string/lend_back"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/lend_back"
        app:drawableLeftCompat="@drawable/lend_back" />

</LinearLayout>