<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".ui.main.tag.TagFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="10dp"
            android:adjustViewBounds="true"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/reverse"
            android:textSize="18sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/max"
            app:cardCornerRadius="40dp">

            <TextView
                android:id="@+id/summ"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/reverse"
                android:textSize="18sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/max"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/middle">

            <TextView
                android:id="@+id/tv_from_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/from_time"
                android:textColor="@color/reverse"
                android:textSize="16sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/max"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/middle">

            <TextView
                android:id="@+id/tv_to_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/to_time"
                android:textColor="@color/reverse"
                android:textSize="16sp" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>